# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
day-1/: Cargo.toml
day-1/src/: part_1.rs  part_2.rs
day-10/: Cargo.toml
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/src/: lib.rs  main.rs  search.rs
day-13/: Cargo.toml
day-13/src/: lib.rs  main.rs  parse.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: lib.rs  main.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-18/: Cargo.toml
day-18/src/: main.rs
day-19/: Cargo.toml
day-19/src/: lib.rs  main.rs  part_1.rs  part_2.rs
day-2/: Cargo.toml
day-2/src/: part_1.rs  part_2.rs
day-20/: Cargo.toml
day-20/src/: lib.rs  main.rs  part_1.rs  part_2.rs
day-21/: Cargo.toml
day-21/src/: lib.rs  map.rs  part_1.rs  part_2.rs
day-22/: Cargo.toml
day-22/src/: lib.rs  main.rs  part_1.rs  part_2.rs
day-23/: Cargo.toml
day-23/src/: main.rs  part_1.rs  part_2.rs
day-24/: Cargo.toml
day-24/src/: main.rs
day-25/: Cargo.toml
day-25/src/: main.rs
day-3/: Cargo.toml
day-3/src/: part_1.rs  part_2.rs
day-4/: Cargo.toml
day-4/src/: part_1.rs  part_2.rs
day-5/: Cargo.toml
day-5-redo/: Cargo.toml
day-6/: Cargo.toml
day-7/: Cargo.toml
day-8/: Cargo.toml
day-9/: Cargo.toml
front-end/: Cargo.toml  index.html  style.css
front-end/src/: lib.rs
front-end/src/components/: form.rs  mod.rs  select.rs  text_area.rs
front-end/src/worker/: mod.rs
util/: Cargo.toml
(+59 files in other folders)
