[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
day-1 = { path = "../day-1" }
day-2 = { path = "../day-2" }
day-3 = { path = "../day-3" }
day-4 = { path = "../day-4" }
day-5 = { path = "../day-5" }
day-6 = { path = "../day-6" }
day-7 = { path = "../day-7" }
day-8 = { path = "../day-8" }
day-9 = { path = "../day-9" }
day-10 = { path = "../day-10" }
day-11 = { path = "../day-11" }
day-12 = { path = "../day-12" }
day-13 = { path = "../day-13" }
day-14 = { path = "../day-14" }
day-15 = { path = "../day-15" }
day-16 = { path = "../day-16" }
day-17 = { path = "../day-17" }
day-18 = { path = "../day-18" }
day-19 = { path = "../day-19" }
day-20 = { path = "../day-20" }
day-21 = { path = "../day-21" }
day-22 = { path = "../day-22" }
day-23 = { path = "../day-23" }
day-24 = { path = "../day-24" }
day-25 = { path = "../day-25" }
